--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <p>Email: mustafafatimah61@gmailcom
     
     </p>
-    <p>GitHub: <a href="https://github.com/Fatimah Muatafa" target="_blank">Fatimah-Mustafa.911993338</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/TIARA-LAB" target="_blank">TIARA-LAB</a></p>
+    <p>GitHub: <a href="https://github.com/Fatimah Muatafa" target="_blank">TIARA-LAB</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/TIARA-LAB" target="_blank">Fatimah-Mustafa.911993338</a></p>
   </section>
 
   <footer>
