--- a/hotel.html
+++ b/hotel.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+I'm<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -259,8 +259,8 @@
 
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
-    <p>Email: info@tiarahotel.com</p>
-    <p>Phone: +234 123 456 7890</p>
+    <p>Email: </p>
+    <p></p>
   </section>
 
   <footer>
